# tket-json-rs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  RELEASES.md  cliff.toml  devenv.nix  justfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  issue.yml  missing-ops.yml  semver-checks.yml
src/: circuit_json.rs  clexpr.rs  lib.rs  opbox.rs  optype.rs  pytket.rs  register.rs
src/clexpr/: op.rs  operator.rs
tests/: lib.rs  missing_optypes.rs  pyproject.toml  pytket_schema.rs  roundtrip.rs
tests/data/: classical.json  diagonal-box.json  qasm.json  qasm.py  rng.json  rng.py  simple.json  wasm.json
tests/schemas/: circuit_v1.json
