[package]
name = "tket-json-rs"
version = "0.4.1"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.70"

readme = "README.md"
documentation = "https://docs.rs/tket-json-rs/"
repository = "https://github.com/CQCL/tket-json-rs"

description = "Serializable definition of TKET circuits and operations."
keywords = ["tket", "quantinuum", "quantum"]
categories = ["compilers"]

[lib]
name = "tket_json_rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
pyo3 = { workspace = true, optional = true }
pythonize = { workspace = true, optional = true }
strum = { workspace = true, features = ["derive"] }

[dev-dependencies]
pyo3 = { workspace = true }

[features]
pyo3 = ["dep:pyo3", "dep:pythonize"]

[[test]]
name = "integration"
path = "tests/lib.rs"

[workspace.dependencies]
pyo3 = "0.21.1"
pythonize = "0.21.1"
serde = "1.0"
serde_json = "1.0"
strum = "0.26.2"
uuid = "1.4"
