[package]
name = "tket-json-rs"
version = "0.7.2"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.75"

readme = "README.md"
documentation = "https://docs.rs/tket-json-rs/"
repository = "https://github.com/CQCL/tket-json-rs"

description = "Serializable definition of TKET circuits and operations."
keywords = ["tket", "quantinuum", "quantum"]
categories = ["compilers"]

[lib]
name = "tket_json_rs"

[dependencies]
derive_more = { workspace = true, features = ["display", "from"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
pyo3 = { workspace = true, optional = true, features = ["extension-module"] }
pythonize = { workspace = true, optional = true }
schemars = { workspace = true, optional = true, features = ["uuid1"] }
strum = { workspace = true, features = ["derive"] }

[dev-dependencies]
itertools = { workspace = true }
pyo3 = { workspace = true }
rstest = { workspace = true }
assert-json-diff = { workspace = true }

[features]
pyo3 = ["dep:pyo3", "dep:pythonize"]
schemars = ["dep:schemars"]

[[test]]
name = "integration"
path = "tests/lib.rs"

[workspace.dependencies]
derive_more = "1.0.0"
itertools = "0.13.0"
pyo3 = ">= 0.23.4, < 0.26"
pythonize = ">= 0.23.0, < 0.26"
rstest = "0.23.0"
schemars = "0.8.22"
serde = "1.0"
serde_json = "1.0"
strum = "0.27"
uuid = "1.17"
assert-json-diff = "2.0.2"
