[project]
name = "tket-json-rs-tests"
version = "0.0.0"
requires-python = ">=3.10"
classifiers = ["Private :: Do Not Upload"]
authors = [
    { name = "TKET development team", email = "tket-support@quantinuum.com" },
]

[dependency-groups]
# Default dev dependency group
dev = [{ include-group = "lint" }, { include-group = "test" }]
lint = ["pre-commit >=3.6.0,<4", "ruff >=0.6.2,<0.7", "mypy ==1.10.0"]
test = ["pytest >=6.2.4,<7", "pytket>=1.32"]
